--- a/src/content/the-last-economy/epilogue.mdx
+++ b/src/content/the-last-economy/epilogue.mdx
@@ -1,5 +1,12 @@
 # Epilogue: The Thousandth Day
 
+<audio controls className="w-full mt-6">
+  <source
+    src="https://storage.googleapis.com/webstatics.ii.inc/Epilogue-TLE.mp3"
+    type="audio/mp3"
+  />
+</audio>
+
 > "What we call the beginning is often the end  
 > And to make an end is to make a beginning.
 > The end is where we start from."  
